# pancake_flipper

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.txt  arm_visualizer.cc  arm_visualizer.py  convert_npz_trajectory_to_csv.py  pancake_flipper_trajopt.py  plant_creation.py  process_results.py  trajectory_execute.py  trajectory_execute_inverse_dynamics_controller.py  trajectory_execute_inverse_dynamics_controller_flipping.py  trajectory_execute_inverse_dynamics_controller_sliding.py  utils.py
models/: flipper_arm_scale.urdf  pancake_arm_scale.urdf  pancake_flipper_floating.urdf  pancake_flipper_massless_links.urdf  pancake_flipper_massless_links_nofriction.urdf  pancake_flipper_only.urdf
results/: arm_viz2_trace_umax40_ceiling5_mu0.0_T60.npz  arm_viz2_trace_umax40_ceiling5_mu0.0_T60.npz_flipper_to.csv  arm_viz2_trace_umax40_ceiling5_mu0.0_T60.npz_pancake_to.csv  arm_viz_trace_umax40_ceiling5_mu0.0_T60.npz  arm_viz_trace_umax40_ceiling5_mu0.0_T60.npz_flipper_to.csv  arm_viz_trace_umax40_ceiling5_mu0.0_T60.npz_pancake_to.csv  flip_trace_umax40_ceiling5_mu0.0_T60.npz  flip_trace_umax40_ceiling5_mu0.1_T60.npz  slide_trace_umax40_ceiling10_mu0.0_T60.npz  slide_trace_umax40_ceiling5_T60.npz  slide_trace_umax40_ceiling5_mu0.0_T60.npz  smolcake_flip_trace_umax40_ceiling5_mu0.1_T60.npz  test_flip_trace_umax40_ceiling5_mu0.0_T60.npz  test_flip_trace_umax40_ceiling5_mu0.0_T60.npz_flipper_to.csv  test_flip_trace_umax40_ceiling5_mu0.0_T60.npz_pancake_to.csv  test_slide_trace_umax40_ceiling5_mu0.0_T60.npz  test_slide_trace_umax40_ceiling5_mu0.0_T60.npz_flipper_to.csv  trace_umax30.npz  (+8 more)
(+2 files in other folders)
